<resources>
    <string name="app_name">EasyRecipes</string>
    <string name="login_instruction">To begin please Login or Register.</string>
    <string name="login_greeting">Welcome to EasyRecipes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="recipe_book">Recipe Book</string>
    <string name="my_recipes">My Recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="discover">Discover</string>
    <string name="my_profile">My Profile</string>
    <string name="first_fragment">RecipeList</string>
    <string name="second_fragment">RecipeView</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="recipeName">Recipe Name</string>
    <string name="ingredientTitle">Ingredients</string>
    <string name="register_failed">Registration failed</string>
    <string name="register_check_username">Please enter a username.</string>
    <string name="register_check_password">Please enter a password.</string>
    <string name="register_username_taken">That username is already taken.</string>
    <string name="login_failed">Invalid credentials</string>
    <string name="login_failed_details">Please ensure your username and password are correct.</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="logout">Logout</string>
    <string name="logo">Logo</string>
    <string name="i_text">no ingredients added yet</string>
    <string name="d_text">no directions added yet</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter Recipe Name:</string>
    <string name="enter_ingredients">Enter Ingredients:</string>
    <string name="enter_directions">Enter Directions:</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="saving">Saving</string>
    <string name="no_recipes">You have no recipes!</string>
    <string name="no_recipes_instruction">Use the plus button to add some!</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_instruction">Do you really want to delete this recipe?</string>
    <string name="failed_add">Failed to add recipe</string>
    <string name="failed_add_instruction">Ensure that the ingredients, directions, and name are filled out.</string>
    <string name="recipe_deleted">Recipe deleted</string>
    <string name="recipe_added">Recipe added</string>
    <string name="default_recipe_name">No Recipe Name</string>
    <string name="add_error">You must connect to the internet to add a recipe.</string>
    <string name="ok">OK</string>
</resources>
